--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,14 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/MainPageText"
+        android:id="@+id/HtmlReqText"
         android:layout_width="124dp"
         android:layout_height="68dp"
-        android:layout_above="@+id/settingsButton"
         android:layout_alignEnd="@+id/settingsButton"
-        android:layout_marginEnd="137dp"
-        android:layout_marginBottom="330dp"
-        android:text="Main Activity"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="199dp"
+        android:layout_marginBottom="353dp"
+        android:text="NFC Data"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.532"
@@ -41,7 +41,30 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="159dp"
-        android:layout_marginBottom="364dp"
+        android:layout_marginEnd="234dp"
+        android:layout_marginBottom="306dp"
         android:text="Get Data" />
+
+    <ToggleButton
+        android:id="@+id/tglReadWrite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="111dp"
+        android:layout_marginBottom="303dp"
+        android:onClick="tglReadWriteOnClick"
+        android:text="ToggleButton"
+        android:textOff="Write"
+        android:textOn="Read" />
+
+    <EditText
+        android:id="@+id/txtTagContent"
+        android:layout_width="118dp"
+        android:layout_height="94dp"
+        android:layout_above="@+id/tglReadWrite"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="97dp"
+        android:layout_marginBottom="11dp"
+        android:text="Will be here" />
 </RelativeLayout>
