--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,12 @@
         android:layout_alignEnd="@+id/settingsButton"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
-        android:text="Result will be here"
+        android:text="Sonuç Burada Olacak"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtTagContent" />
+        app:layout_constraintTop_toBottomOf="@+id/TCinput" />
 
     <Button
         android:id="@+id/settingsButton"
@@ -39,26 +39,55 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:text="Get Data"
-        app:layout_constraintBottom_toBottomOf="@+id/txtTagContent"
+        android:backgroundTint="#AA2C2E40"
+        android:text="Öğren"
+        app:layout_constraintBottom_toBottomOf="@+id/TCinput"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.647"
-        app:layout_constraintStart_toEndOf="@+id/txtTagContent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.808" />
+        app:layout_constraintHorizontal_bias="0.566"
+        app:layout_constraintStart_toEndOf="@+id/TCinput"
+        app:layout_constraintTop_toTopOf="@+id/TCinput" />
 
     <EditText
-        android:id="@+id/txtTagContent"
-        android:layout_width="219dp"
-        android:layout_height="88dp"
+        android:id="@+id/TCinput"
+        android:layout_width="241dp"
+        android:layout_height="74dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:textSize="30sp"
+        android:autofillHints=""
+        android:hint="@string/TCViewDefault"
+        android:inputType="number"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.161"
+        app:layout_constraintHorizontal_bias="0.094"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.136" />
+        app:layout_constraintVertical_bias="0.211" />
+
+    <TextView
+        android:id="@+id/girisYapildiView"
+        android:layout_width="268dp"
+        android:layout_height="42dp"
+        android:text="@string/girisViewDefault"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/TCinput"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.111"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.35" />
+
+    <Button
+        android:id="@+id/retryButton"
+        android:layout_width="77dp"
+        android:layout_height="52dp"
+        android:backgroundTint="#ECA8A8"
+        android:text="Tekrar Dene"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/girisYapildiView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.589"
+        app:layout_constraintStart_toEndOf="@+id/girisYapildiView"
+        app:layout_constraintTop_toTopOf="@+id/girisYapildiView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
