Farklı organizasyonlardaki insanlar için tüm  organizasyonların yazılması sağlandı, static toast fonksiyonu eklendi ve UI Türkçeleştirildi

--- a/app/src/main/res/layout/activity_settings_v2.xml
+++ b/app/src/main/res/layout/activity_settings_v2.xml
@@ -37,7 +37,7 @@
         android:id="@+id/savebutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kaydet"
+        android:text="Kaydet ve Giriş Yap"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.87"
@@ -53,8 +53,9 @@
         android:hint="Password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/editTect"
+        app:layout_constraintStart_toStartOf="@+id/editTect"
         app:layout_constraintTop_toBottomOf="@+id/editTect"
-        app:layout_constraintVertical_bias="0.034"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintVertical_bias="0.034" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
