splash screen init, geri dönme tuşu, ayarlar butonu küçültüldü

--- a/app/src/main/res/layout/activity_settings_v2.xml
+++ b/app/src/main/res/layout/activity_settings_v2.xml
@@ -40,10 +40,10 @@
         android:text="Kaydet ve Giriş Yap"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.858"
+        app:layout_constraintHorizontal_bias="0.879"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
-        app:layout_constraintVertical_bias="0.247" />
+        app:layout_constraintTop_toBottomOf="@+id/organizationInput"
+        app:layout_constraintVertical_bias="0.098" />
 
     <EditText
         android:id="@+id/inputPassword"
