--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#77eeee">
 
     <TextView
         android:id="@+id/HtmlReqText"
@@ -14,6 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:text="Sonuç Burada Olacak"
+        android:textColor="#000000"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,6 +60,8 @@
         android:autofillHints=""
         android:hint="@string/TCViewDefault"
         android:inputType="number"
+        android:textColor="#000000"
+        android:textColorHint="#747075"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,6 +76,7 @@
         android:layout_height="42dp"
         android:text="@string/girisViewDefault"
         android:textAlignment="center"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/TCinput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.111"
